--- a/templates/create-payment.html
+++ b/templates/create-payment.html
@@ -31,13 +31,13 @@
 	</div>
 
 	<div class="row" style="text-align:center">
-		<label for="comments" class="span12">Leave a note for your friend here!  (We will do the work to explain where and how the money can be retrieved, so you don't have to.)</label>
+		<label for="comments" class="span12" style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;">Add a note to your gift!  We'll let your friend know how to claim it.</label>
 	</div>
 
 
 	<div class="row" style="text-align:center">
 		<div class="span12">
-		<textarea name="comments" id="comments" maxlength="2000" style="color:black; width: 600px; height: 100px;" placeholder="I'm leaving you a gift!"></textarea><br />
+		<textarea name="comments" id="comments" maxlength="2000" style="color:black; width: 400px; height: 60px;" placeholder="I'm leaving you a gift!"></textarea><br />
 		</div>
 	</div>
 	<div class="row" style="text-align:center">
@@ -46,7 +46,7 @@
 		</div>
 	</div>
 	<div class="row" style="text-align:center">
-		<label for="comments" class="span12">You venmo account will get charged when your friend checks in at the requested location.<br>Don't worry - if your friend never checks in there, you don't have to pay!</label>
+		<label for="comments" class="span12">Your Venmo account will get charged when your friend checks in at the venue you chose.<br>Don't worry - if your friend never checks in there, you don't have to pay!</label>
 	</div>
 	</form>
 	
