--- a/templates/venmo-login.html
+++ b/templates/venmo-login.html
@@ -9,18 +9,24 @@
 <body>
 <!-- content container -->
 
-<div class="container" id="content-container">
-	<div class="row span2 offset10">
+<div class="row" id="topnavbar">
+	<div id="logo">
+		<a href="http://geocash.herokuapp.com/"><img src="../static/images/logo.png" /></a>
+	</div>
+	<div id="logout">
 		<a href="http://geocash.herokuapp.com/logout/"><div class="btn btn-primary">Log out</div></a>
 	</div>
+</div>
+<div class="container" id="content-container">
+
 	<div class="row">
-		<div class="span6 hidden-phone" id="screenshot">
+		<!--<div class="span6 hidden-phone" id="screenshot">
 			[insert screenshot]
-		</div>
-		<div class="span6" id="homepage-logo">
-			<img src="../static/images/logo.png" style="padding: 10px;"/>
+		</div>-->
+		<div class="span6 offset3" id="homepage-logo">
+			
 			<h1>Great! You can now receive money.</h1><br>
-			<h3>Once you check in, we'll let you know how to redeem your gift with Venmo.</h3><br>
+			<h3 style="line-height:30px;">Once you check in, we'll let you know how to redeem your gift with Venmo.</h3><br>
 			
 			<br>
 			<br>
