--- a/templates/create-payment.html
+++ b/templates/create-payment.html
@@ -15,11 +15,15 @@
 	<script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
 </head>
 <body>
-
-<div class="container" id="content-container">
-	<div class="row span2 offset10">
-		<a href="https://geocash.herokuapp.com/logout/"><div class="btn btn-primary">Log out</div></a>
+<div class="row" id="topnavbar">
+	<div id="logo">
+		<a href="http://geocash.herokuapp.com/"><img src="../static/images/logo.png" /></a>
 	</div>
+	<div id="logout">
+		<a href="http://geocash.herokuapp.com/logout/"><div class="btn btn-primary">Log out</div></a>
+	</div>
+</div>
+<div class="container" id="content-container">
 
 	<form action="/add_pending_payment" method="post">	
 	<div class="row">
