--- a/templates/pick-venue.html
+++ b/templates/pick-venue.html
@@ -15,19 +15,23 @@
 	<script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
 </head>
 <body>
-
-<div class="container" id="content-container">
-	<div class="row span2 offset10">
-		<a href="https://geocash.herokuapp.com/logout/"><div class="btn btn-primary">Log out</div></a>
+<div class="row" id="topnavbar">
+	<div id="logo">
+		<a href="http://geocash.herokuapp.com/"><img src="../static/images/logo.png" /></a>
 	</div>
-	
+	<div id="logout">
+		<a href="http://geocash.herokuapp.com/logout/"><div class="btn btn-primary">Log out</div></a>
+	</div>
+</div>
+<div class="container" id="content-container">
+
 	<!-- area for user input -->
 	<div class="row">
-		<div class="span5">
-			<input type="text" name="venue_name" id="venue_name" class="input-block-level" placeholder="Venue name">
+		<div class="span6">
+			<input type="text" name="venue_name" id="venue_name" class="input-block-level" placeholder="Venue name (Starbucks; Philly cheesesteaks...)">
 		</div>
-		<div class="span5">
-			<input type="text" name="geocode" id="geocode" class="input-block-level" placeholder="City or area">
+		<div class="span3">
+			<input type="text" name="geocode" id="geocode" class="input-block-level" placeholder="City or area (New York; Chicago, IL...)">
 		</div>
 		<div class="span2">
 			<button class="btn btn-primary" type="submit" id="finditbutton">Find it!</button>
@@ -40,6 +44,7 @@
 			<div class="error-holder">
 			</div>
 			<div class="data-holder">
+				<span style="color: #ccc">Search for something!</span>
 			</div>
 		<!-- custom javascript to dynamically populate search results -->
 		<script type="text/javascript">
@@ -101,7 +106,7 @@
 								var venue = obj.response.venues[i];
 								
 								//build the search results
-								dataHTML += "<a href=http://geocash.herokuapp.com/add_venue?venue_id=" + venue.id><div class=\"btn btn-select-venue\">" + venue.name;
+								dataHTML += "<a href=http://geocash.herokuapp.com/add_venue?venue_id=" + venue.id + "><div class=\"btn btn-select-venue\">" + venue.name;
 								//some venues don't have address or cross street, so avoid "undefined"
 								if(venue.location.address) {
 									dataHTML += " - " + venue.location.address;
@@ -131,7 +136,7 @@
 							map.fitBounds(LatLngArray);
 							//map.setView([10, -0.53], 13);
 							
-							alert(document.URL);
+							//alert(document.URL);
 						}
 				}); //end ajax
 			} // end of search & population (no errors to start)
@@ -148,7 +153,7 @@
 	</style>
 		<div class="span6">
 			<div id="map"></div>
-			<script src="../dist/leaflet.js"></script>
+			<!--<script src="../dist/leaflet.js"></script>-->
 	<script>
 
 		var map = L.map('map').setView([40.77, -73.9597], 11);
