Various style edits

--- a/templates/create-payment.html
+++ b/templates/create-payment.html
@@ -41,7 +41,7 @@
 
 	<div class="row" style="text-align:center">
 		<div class="span12">
-		<textarea name="comments" id="comments" maxlength="2000" style="color:black; width: 400px; height: 60px;" placeholder="I'm leaving you a gift!"></textarea><br />
+		<textarea name="comments" id="comments" maxlength="2000" style="color:black; width: 400px; height: 60px;" placeholder=""></textarea><br />
 		</div>
 	</div>
 	<div class="row" style="text-align:center">
