Slight changes to payments page

--- a/templates/create-payment.html
+++ b/templates/create-payment.html
@@ -25,7 +25,6 @@
 </div>
 <div class="container" id="content-container">
 
-	<!--<form action="/add_pending_payment" method="post">-->	
 	<div class="row">
 		<label for="pay_amt" class="span1 offset5">Amount $</label>
 		<div class="span1">
@@ -45,8 +44,8 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="span2 offset6">
-			<input type="submit" name="submit" value="Send Gift" id="button">
+		<div class="span12" style="text-align:center">
+			<div class="btn btn-primary	" id="button">Send gift</div>
 		</div>
 	</div>
 
@@ -62,17 +61,10 @@
 		});
 	});
 	</script>
-	<!--</form>-->
 
-	<div class="row" style="text-align:center">
-		<div class="span12">
-			<input type="submit" name="submit" value="Send Gift">
-		</div>
-	</div>
 	<div class="row" style="text-align:center">
 		<label for="comments" class="span12">Your Venmo account will get charged when your friend checks in at the venue you chose.<br>Don't worry - if your friend never checks in there, you don't have to pay!</label>
 	</div>
-	</form>
 	
 	<div class="row" id="spacer100">
 	</div>
