Style edits in pick-venue 2

--- a/templates/create-payment.html
+++ b/templates/create-payment.html
@@ -24,7 +24,8 @@
 	</div>
 </div>
 <div class="container" id="content-container">
-
+	<div class="row" id="spacer40">
+	</div>
 	<form action="/add_pending_payment" method="post">	
 	<div class="row">
 		<label for="pay_amt" class="span1 offset5">Amount $</label>
@@ -33,12 +34,15 @@
 
 		</div>
 	</div>
-
+	<div class="row">
+		&nbsp;
+	</div>
 	<div class="row" style="text-align:center">
 		<label for="comments" class="span12" style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;">Add a note to your gift!  We'll let your friend know how to claim it.</label>
 	</div>
-
-
+	<div class="row">
+		&nbsp;
+	</div>
 	<div class="row" style="text-align:center">
 		<div class="span12">
 		<textarea name="comments" id="comments" maxlength="2000" style="color:black; width: 400px; height: 60px;" placeholder=""></textarea><br />
@@ -48,6 +52,9 @@
 		<div class="span12">
 			<input type="submit" name="submit" value="Send Gift">
 		</div>
+	</div>
+	<div class="row">
+		&nbsp;
 	</div>
 	<div class="row" style="text-align:center">
 		<label for="comments" class="span12">Your Venmo account will get charged when your friend checks in at the venue you chose.<br>Don't worry - if your friend never checks in there, you don't have to pay!</label>
