More fall cleaning

--- a/templates/create-payment.html
+++ b/templates/create-payment.html
@@ -28,10 +28,9 @@
 	</div>
 
 	<div class="row">
-		<label for="pay_amt" class="span1 offset5">Amount $</label>
+		<label for="pay_amt" class="span1 offset5" style="margin-top: 7px">Amount: $</label>
 		<div class="span1">
 			<input type="number" step=".01" value="5.00" min=".01" name="pay_amt" id="pay_amt" class="input-block-level">
-
 		</div>
 	</div>
 	<div class="row">
