Changes to button colors, etc.

--- a/templates/create-payment.html
+++ b/templates/create-payment.html
@@ -50,7 +50,7 @@
 	</div>
 	<div class="row">
 		<div class="span12" style="text-align:center">
-			<div class="btn btn-primary	" id="button">Send gift</div>
+			<div class="btn btn-primary" id="button" style="font-size: 20px;">Send gift</div>
 		</div>
 	</div>
 
