--- a/static/bootstrap/css/bootstrap.css
+++ b/static/bootstrap/css/bootstrap.css
@@ -3360,7 +3360,7 @@ input[type="button"].btn-block {
 .btn-primary {
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-  background-color: #006dcc;
+  /*background-color: #006dcc;
   *background-color: #0044cc;
   background-image: -moz-linear-gradient(top, #0088cc, #0044cc);
   background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0044cc));
@@ -3371,6 +3371,19 @@ input[type="button"].btn-block {
   border-color: #0044cc #0044cc #002a80;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0044cc', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);*/
+  
+  background-color: #3f94d0;
+  *background-color: #337aab;
+  background-image: -moz-linear-gradient(top, #3f94d0, #337aab);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#3f94d0), to(#337aab));
+  background-image: -webkit-linear-gradient(top, #3f94d0, #337aab);
+  background-image: -o-linear-gradient(top, #3f94d0, #337aab);
+  background-image: linear-gradient(to bottom, #3f94d0, #337aab);
+  background-repeat: repeat-x;
+  border-color: ##337aab ##337aab #002a80;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff3f94d0', endColorstr='#337aab', GradientType=0);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
 }
 
@@ -3381,7 +3394,7 @@ input[type="button"].btn-block {
 .btn-primary.disabled,
 .btn-primary[disabled] {
   color: #ffffff;
-  background-color: #0044cc;
+  background-color: #337aab;
   *background-color: #003bb3;
 }
 
@@ -3926,6 +3939,7 @@ input[type="submit"].btn.btn-mini {
   color: #3a87ad;
   background-color: #d9edf7;
   border-color: #bce8f1;
+  display: block;
 }
 
 .alert-info h4 {
@@ -6232,7 +6246,8 @@ a.badge:focus {
 	opacity: 0.5;
 }
 .error-holder{
-	color: #f00;
+	/*color: #f00;*/
+	display: none;
 }
 .form-signin {
     max-width: 800px;
