--- a/templates/pick-friend.html
+++ b/templates/pick-friend.html
@@ -29,7 +29,7 @@
 
 	<!-- area for user input -->
 	<div class="row" style="text-align: center;">
-	<div class="alert alert-info"><a class="close" data-dismiss="alert">x</a>
+	<div class="alert alert-info" style="display: {{showOrNot}}"><a class="close" data-dismiss="alert">x</a>
 	<script text="type/javascript">
 	$(document).ready(function(){
 		//alert("ready!");
@@ -38,7 +38,7 @@
 		});
 	});
 	</script>
-	<strong>Woohoo!</strong>&nbsp;You sent a payment. How about another one?
+	<strong>Woohoo!</strong>&nbsp;You sent a payment.
 	</div>
 		<!--<div class="span5">
 			<input type="text" name="friend_name" id="friend_name" class="input-block-level" placeholder="Your friend's name">
