fuckkkkkkkkkkKkkkkkkKKkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk YES dood bro

--- a/templates/pick-friend.html
+++ b/templates/pick-friend.html
@@ -38,7 +38,7 @@
 		});
 	});
 	</script>
-	<strong>Woohoo!</strong>&nbsp;You sent a payment.
+	<strong>Woohoo!</strong>&nbsp;You successfully left a GeoCash gift.
 	</div>
 		<!--<div class="span5">
 			<input type="text" name="friend_name" id="friend_name" class="input-block-level" placeholder="Your friend's name">
