--- a/templates/pick-friend.html
+++ b/templates/pick-friend.html
@@ -22,7 +22,7 @@
 		<a href="http://geocash.herokuapp.com/"><img src="../static/images/logo.png" /></a>
 	</div>
 	<div id="logout">
-		<a href="http://geocash.herokuapp.com/"><div class="btn btn-primary">Log out</div></a>
+		<a href="http://geocash.herokuapp.com/logout/"><div class="btn btn-primary">Log out</div></a>
 	</div>
 </div>
 <div class="container" id="content-container">
