--- a/templates/create-payment.html
+++ b/templates/create-payment.html
@@ -17,10 +17,10 @@
 <body>
 <div class="row" id="topnavbar">
 	<div id="logo">
-		<a href="http://geocash.herokuapp.com/"><img src="../static/images/logo.png" /></a>
+		<a href="http://geoca.sh/"><img src="../static/images/logo.png" /></a>
 	</div>
 	<div id="logout">
-		<a href="http://geocash.herokuapp.com/logout/"><div class="btn btn-primary">Log out</div></a>
+		<a href="http://geoca.sh/logout/"><div class="btn btn-primary">Log out</div></a>
 	</div>
 </div>
 <div class="container" id="content-container">
@@ -65,7 +65,7 @@
 			var message = $("#comments").val();
 			//alert(message);
 			var amount = $("#pay_amt").val();
-			var new_url = "http://geocash.herokuapp.com/add_pending_payment?note=" + message + "&amount=" + amount;
+			var new_url = "http://geoca.sh/add_pending_payment?note=" + message + "&amount=" + amount;
 			//alert(new_url);
 			window.location = new_url;
 		});
