--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
 	<link href="../static/bootstrap/css/bootstrap.css" rel="stylesheet">
 	<link href="../static/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
 	<title>GeoCash</title>
+
 </head>
 <body>
 <!-- content container -->
@@ -41,6 +42,28 @@
 			<a href="http://www.mongodb.org"><img src="../static/images/mongodb-powered-button.png" id="mongodb-logo" /></a>
 		</div>
 	</div>
+	<div class="row" id="spacer40">
+	</div>
+
+	<div class="row">
+
+		<script src="http://s7.addthis.com/js/300/addthis_widget.js" type="text/javascript"></script> 
+
+		<!-- AddThis Button BEGIN -->
+		<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+		<a class="addthis_button_facebook"></a>
+		<a class="addthis_button_email"></a>
+		<a class="addthis_button_twitter"></a>
+		<a class="addthis_button_pinterest_share"></a>
+		<a class="addthis_button_compact"></a><a class="addthis_counter addthis_bubble_style"></a>
+		</div>
+		<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-522c49f96fcb6d57"></script>
+		<!-- AddThis Button END -->
+
+	</div>
+
+	
 </div> <!-- /container -->
 
 </body>
