--- a/templates/index.html
+++ b/templates/index.html
@@ -46,8 +46,9 @@
 	<div class="row" id="spacer40">
 	</div>
 
-	<div class="row">
-
+	<div class="row" style="text-align:center;">
+	<div class="span12" style="text-align:center;">
+		
 		<script src="http://s7.addthis.com/js/300/addthis_widget.js" type="text/javascript"></script> 
 
 		<!-- AddThis Button BEGIN -->
@@ -61,9 +62,10 @@
 		<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
 		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-522c49f96fcb6d57"></script>
 		<!-- AddThis Button END -->
-
+	</div>
 	</div>
 
+	<div id="spacer40"></div>
 	
 </div> <!-- /container -->
 
