--- a/templates/index.html
+++ b/templates/index.html
@@ -48,6 +48,12 @@
 
 	<div class="row" style="text-align:center;">
 	<div class="span12" style="text-align:center;">
+	<style>
+		div.addthis_toolbox{
+			width: 250px;
+			margin: 0 auto;
+		}
+	</style>
 		
 		<script src="http://s7.addthis.com/js/300/addthis_widget.js" type="text/javascript"></script> 
 
