--- a/templates/faq.html
+++ b/templates/faq.html
@@ -21,7 +21,7 @@
 
 	<div class="row">
 		<div class="span6 offset3" id="homepage-logo">
-			
+			<h3 style="line-height:30px;">This is a Hackathon project still under development.  It will be available to the public soon, so keep checking back!</h3><br>
 			<h1>How does this work?</h1><br>
 			<h3 style="line-height:30px;">1. Sign in with Foursquare.</h3>
 			<p style="padding-bottom: 20px;">This allows you to find your friends and your favorite locations through GeoCash. 
