--- a/templates/faq.html
+++ b/templates/faq.html
@@ -18,22 +18,26 @@
 	</div>
 </div>
 <div class="container" id="content-container">
-
 	<div class="row">
-		<div class="span6 offset3" id="homepage-logo">
-			<h3 style="line-height:30px;">This is a Hackathon project still under development.  It will be available to the public soon, so keep checking back!</h3><br>
-			<h1>How does this work?</h1><br>
+	<div class="span8 offset2" style="text-align:center">
+		<h3 style="line-height:30px; color: #3f94d0;">This is a Hackathon project still under development.  It will be available to the public soon, so keep checking back!</h3>
+	</div>
+	</div>
+	<div class="row">
+		<div class="span8 offset2" id="homepage-logo">
+
+			<h2 style="text-decoration:underline">How does this work?</h2>
 			<h3 style="line-height:30px;">1. Sign in with Foursquare.</h3>
-			<p style="padding-bottom: 20px;">This allows you to find your friends and your favorite locations through GeoCash. 
+			<p style="padding-bottom: 10px;">This allows you to find your friends and your favorite locations through GeoCash. 
 			We're not going to post anything without your permission, and your information is safe with us!</p>
 			
 			<h3 style="line-height:30px;">2. Leave money for a friend.</h3>
-			<p style="padding-bottom: 20px;">Using our simple 3-step app, you can leave a gift for a Foursquare friend at a location of your choosing. 
+			<p style="padding-bottom: 10px;">Using our simple 3-step app, you can leave a gift for a Foursquare friend at a location of your choosing. 
 			We use Venmo to help set up a secure transaction, and SendGrid helps us tell your friend about their gift.
 			</p>
 			
-			<h3 style="line-height:30px;">3. Your friend checks in on Foursquare.</h3>
-			<p style="padding-bottom: 20px;">Your Foursquare friend doesn't have to have a Venmo account - we'll take care of all the details to make sure your gift gets through.</p>
+			<h3 style="line-height:30px;">3. Your friend gets a gift.</h3>
+			<p style="padding-bottom: 10px;">Your Foursquare friend checks in at the location to redeem their gift. They don't have to have a Venmo account - we'll take care of all the details to make sure your gift gets through.</p>
 			
 			<h3 style="line-height:30px;">4. Repeat!</h3>
 
