add_email to add

--- a/templates/mailing_list.html
+++ b/templates/mailing_list.html
@@ -45,7 +45,7 @@
 	</div>
 
 	<div id="homepage-logo">
-		<a href="http://geocash.herokuapp.com/mailing_list?add_email=true"><div class="btn btn-large">Email me when GeoCash opens for public Beta</div></a>
+		<a href="http://geocash.herokuapp.com/mailing_list?add=true"><div class="btn btn-large">Email me when GeoCash opens for public Beta</div></a>
 			
 			<br/>
 			<br/>
