add email_me:true to all database entries of users who want to do beta

--- a/templates/mailing_list.html
+++ b/templates/mailing_list.html
@@ -27,7 +27,7 @@
 		});
 	});
 	</script>
-	<strong>Woohoo!</strong>&nbsp;You successfully left a GeoCash gift.
+		Your email has been saved -- we'll get in touch when we're ready for new users! 
 	</div>
 
 	<div class="row">
