trying to make alert disappear when clicked

--- a/templates/mailing_list.html
+++ b/templates/mailing_list.html
@@ -27,7 +27,7 @@
 		});
 	});
 	</script>
-		Your email has been saved -- we'll get in touch when we're ready for new users! 
+		&nbsp;Your email has been saved -- we'll get in touch when we're ready for new users! 
 	</div>
 
 	<div class="row">
