--- a/templates/mailing_list.html
+++ b/templates/mailing_list.html
@@ -12,10 +12,10 @@
 
 <div class="row" id="topnavbar">
 	<div id="logo">
-		<a href="http://geocash.herokuapp.com/"><img src="../static/images/logo.png" /></a>
+		<a href="{{base_url}}"><img src="../static/images/logo.png" /></a>
 	</div>
 	<div id="logout">
-		<a href="http://geocash.herokuapp.com/logout/"><div class="btn btn-primary">Log out</div></a>
+		<a href="{{base_url}}/logout/"><div class="btn btn-primary">Log out</div></a>
 	</div>
 </div>
 <div class="container" id="content-container">
@@ -46,14 +46,14 @@
 	</div>
 
 	<div id="homepage-logo">
-		<a href="http://geocash.herokuapp.com/mailing_list?add=true"><div class="btn btn-large">Email me when GeoCash opens for public Beta</div></a>
+		<a href="{{base_url}}/mailing_list?add=true"><div class="btn btn-large">Email me when GeoCash opens for public Beta</div></a>
 			
 			<br/>
 			<br/>
 			<br/>
 			<br/>
 
-		<a href="http://geocash.herokuapp.com/faq"<div class="btn btn-large">Learn more about how GeoCash works</a></p>.
+		<a href="{{base_url}}/faq"<div class="btn btn-large">Learn more about how GeoCash works</a></p>.
 			<br/>
 			<br/>
 			<br/>
