--- a/templates/faq.html
+++ b/templates/faq.html
@@ -22,7 +22,7 @@
 	<div class="row">
 		<div class="span6 offset3" id="homepage-logo">
 			
-			<h3 style="line-height:30px;">This is a Hackathon Project still under development.  It will be open to the public soon, so keep checking back!</h3><br><br>
+			<h3 style="line-height:30px;">This is a Hackathon project still under development.  It will be open to the public soon, so keep checking back!</h3><br>
 
 			<h1>How does this work?</h1><br>
 
